Complete extracting living/birth cities
Takes user input and loops through it to find "birth" or "live" words and takes the PROPN following those, extracting the cities that user is living and born in.

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,15 @@
         <header>
             <h2>Please, inform me....</h2>
         </header>
-        <div class="chat">
+        <div class="chatArea">
             <form method="POST">
                 <p>Tell me about yourself.</p>
-                <input type="text" name="CityBorn" id="CityBorn" />
-                <input type="submit" value="Submit" />
+                <div class="chat">
+                    <div class="response">
+                    </div>
+                    <textarea name="CityBorn" id="CityBorn" ></textarea>
+                    <input id="submitButton" type="submit" value="Go" />
+                </div>
             </form>
         </div>
     </body>
