--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,13 +7,27 @@ h2 {
     text-align: center;
 }
 
-.chat {
-    text-align: center;
+.chatArea {
     display: inline-block;
+    height: 60%;
+    width: 40%;
+    margin-left: 30%;
+    margin-right: 20%;
+    margin-top: 5%;
+    text-align: center;
+}
+
+.chat {
+    color: rgb(157, 241, 234);
+    padding-top: 10px;
+    margin-top: 10px;
 }
 
 form {
-    margin: 0 auto;
     background-color: #17c3b2;
     align-items: center;
+}
+
+#cityBorn {
+    margin: auto;
 }
