--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Flask app</title>
-        <link rel="stylesheet" type="text/css" href="..\static\css\main.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/main.css">
+        <script type="text/javascript" src="../static/javascript/scripts.js"></script>
     </head>
     <body>
         <header>
